Correct my name

--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -13,7 +13,7 @@ Representation of Natural Scenes with Large Seasonal Variations}
 \addauthor{Titouan Cottencin$^{1,}$}{}{3}
 \addauthor{Quentin Groshens$^{1,}$}{}{3}
 \addauthor{Shane Griffith$^{2,3,}$}{}{4}
-\addauthor{J\'r\'emy Fix$^{1,}$}{jeremy.fix@centralesupelec.fr}{4}
+\addauthor{J\'er\'emy Fix$^{1,}$}{jeremy.fix@centralesupelec.fr}{4}
 \addauthor{C\'edric Pradalier$^{2,3,}$}{cedric.pradalier@georgiatech-metz.fr}{4}
 
 % Enter the institutions
