cleaning up the bib and adding the state of art references of the github repo

--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -1,2 +1,9 @@
 \section{Related Works}
 
+\begin{itemize}
+    \item Deep nets for plant recognition \cite{Reyes2015},
+    \item Deep nets for place recognition \cite{Sunderhauf2015},
+    \item Change detection across seasons, \cite{Neubert2013}, not based on deep nets
+    \item the framework of cedric and shane for the lake dataset and image alignements : "Survey Registration For Long-Term Natural Environment Monitoring"
+\end{itemize}
+
