--- a/egbib.bib
+++ b/egbib.bib
@@ -1,123 +1,53 @@
+@comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
-@misc{Authors06,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {ECCV06 submission ID 324. Supplied as additional material {\tt eccv06.pdf}},
- year = 2006
+@inproceedings{Reyes2015,
+	added-at = "2015-09-03T00:00:00.000+0200",
+	author = "Reyes, Angie K. and Caicedo, Juan C. and Camargo, Jorge E.",
+	biburl = "http://www.bibsonomy.org/bibtex/2a44ed1dad67dc2aecab7077aa6bcefde/dblp",
+	booktitle = "{CLEF (Working Notes)}",
+	editor = "Cappellato, Linda and Ferro, Nicola and Jones, Gareth J. F. and SanJuan, Eric",
+	ee = "http://ceur-ws.org/Vol-1391/121-CR.pdf",
+	interhash = "b11d669b16983163cf5ff0eee92c3d81",
+	intrahash = "a44ed1dad67dc2aecab7077aa6bcefde",
+	keywords = "dblp",
+	publisher = "CEUR-WS.org",
+	series = "{CEUR Workshop Proceedings}",
+	timestamp = "2015-09-04T11:34:55.000+0200",
+	title = "{Fine-tuning Deep Convolutional Networks for Plant Recognition.}",
+	volume = 1391,
+	x-fetchedfrom = "Bibsonomy",
+	year = 2015
 }
 
-@misc{Authors06b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2006
+@article{Sunderhauf2015,
+	added-at = "2015-02-02T00:00:00.000+0100",
+	author = "S{\"u}nderhauf, Niko and Dayoub, Feras and Shirazi, Sareh and Upcroft, Ben and Milford, Michael",
+	interhash = "e17ad10d245abaa50794c745c03ec220",
+	intrahash = "93627fa6223ca3c38b4d6dd825ecb1d7",
+	journal = "CoRR",
+	keywords = "dblp",
+	timestamp = "2015-06-18T03:45:31.000+0200",
+	title = "{On the Performance of ConvNet Features for Place Recognition.}",
+	volume = "abs/1501.04158",
+	x-fetchedfrom = "Bibsonomy",
+	year = 2015
 }
 
-@article{Alpher02,
-author = {A. Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
+@inproceedings{Neubert2013,
+	added-at = "2014-01-15T00:00:00.000+0100",
+	author = "Neubert, Peer and S{\"u}nderhauf, Niko and Protzel, Peter",
+	biburl = "http://www.bibsonomy.org/bibtex/289a5a6a02289226a910dfb26d4980164/dblp",
+	booktitle = "{ECMR}",
+	ee = "http://dx.doi.org/10.1109/ECMR.2013.6698842",
+	interhash = "5b21d3dd00e337ea8da212046e9cf230",
+	intrahash = "89a5a6a02289226a910dfb26d4980164",
+	isbn = "978-1-4799-0263-7",
+	keywords = "dblp",
+	pages = "198--203",
+	publisher = "IEEE",
+	timestamp = "2015-11-18T11:47:58.000+0100",
+	title = "{Appearance change prediction for long-term navigation across seasons.}",
+	x-fetchedfrom = "Bibsonomy",
+	year = 2013
 }
 
-@article{Alpher03,
-author = {A. Alpher and J.~P.~N. Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
-}
-
-@article{Alpher04,
-author = {A. Alpher and J.~P.~N. Fotheringham-Smythe and G. Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
-}
-
-@article{Mermin89,
-author = {N. David Mermin},
-title = {What's wrong with these equations?},
-journal = {Physics Today},
-year = 1989,
-month = oct,
-note = {\small\url{http://www.cvpr.org/doc/mermin.pdf}}
-}
-
-@Book{Hartley00,
-  author       = "Hartley, R.~I. and Zisserman, A.",
-  title        = "Multiple View Geometry in Computer Vision",
-  year         = "2000",
-  publisher    = "Cambridge University Press, ISBN: 0521623049",
-}
-
-@InProceedings{Claus05,
-  author       = "Claus, D. and Fitzgibbon, A.~W.",
-  title        = "A Rational Function Lens Distortion Model for General
-                 Cameras",
-  booktitle    = "Proc. CVPR",
-  year         = "2005",
-  pages        = "213--219",
-}
-
-@InProceedings{Zhang96,
-  author =	 "Z. Zhang",
-  title =	 "On the Epipolar Geometry Between Two Images With
-                  Lens Distortion",
-  booktitle =	 "Proc. ICPR",
-  year =	 "1996",
-  pages =	 "407--411",
-}
-
-@InProceedings{Fitzgibbon01,
-  author       = "Fitzgibbon, A.~W.",
-  title        = "Simultaneous Linear Estimation of Multiple View
-                 Geometry and Lens Distortion",
-  booktitle    = "Proc. CVPR",
-  year         = "2001"
-}
-
-@article{Brown71,
-author = {D.~C. Brown},
-title = {Close-range camera calibration},
-journal = {Photogrammetric Eng.},
-volume = 37,
-number = 8,
-pages = {855--866}, 
-year = 1971
-}
-
-@article{Devernay01,
-author = {F. Devernay and O. Faugeras},
-title = {Straight lines have to be straight},
-journal = {MVA},
-volume = 13,
-pages = {14--24}, 
-year = 2001
-}
-
-@article{Swaminathan00,
-author = {R. Swaminathan and S. Nayar},
-title = {Nonmetric calibration of wide-angle lenses and polycameras},
-journal = {IEEE T-PAMI},
-volume = 22,
-number = 10,
-pages = {1172--1178}, 
-year = 2000
-}
-
-@InProceedings{Tsai86,
-  author =	 "Tsai, Y.~R.",
-  title =	 "An Efficient and Accurate Camera Calibration
-                  Technique for {3D} Machine Vision",
-  booktitle =	 "Proc. CVPR",
-  year =	 "1986",
-}
