--- a/egbib.bib
+++ b/egbib.bib
@@ -51,3 +51,49 @@
 	year = 2013
 }
 
+@inproceedings{conf/accv/PfisterSCZ14,
+  added-at = {2015-04-16T00:00:00.000+0200},
+  author = {Pfister, Tomas and Simonyan, Karen and Charles, James and Zisserman, Andrew},
+  biburl = {http://www.bibsonomy.org/bibtex/2594a6e5cccf97052343ebdb4793d9855/dblp},
+  booktitle = {ACCV (1)},
+  crossref = {conf/accv/2014-1},
+  editor = {Cremers, Daniel and Reid, Ian D. and Saito, Hideo and Yang, Ming-Hsuan},
+  ee = "http://dx.doi.org/10.1007/978-3-319-16865-4_35",
+  interhash = {b5fefb6d612dd17851219fd8f6633d4a},
+  intrahash = {594a6e5cccf97052343ebdb4793d9855},
+  isbn = {978-3-319-16864-7},
+  keywords = {dblp},
+  pages = "538--552",
+  publisher = "Springer",
+  series = {Lecture Notes in Computer Science},
+  timestamp = "2015-09-15T11:35:50.000+0200",
+  title = "{Deep Convolutional Neural Networks for Efficient Pose Estimation in Gesture Videos.}",
+  volume = 9003,
+  year = 2014
+}
+
+@incollection{NIPS2012_4824,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+
+@Article{Simonyan14c,
+    author       = "Simonyan, K. and Zisserman, A.",
+    title        = "Very Deep Convolutional Networks for Large-Scale Image Recognition",
+    journal      = "CoRR",
+    volume       = "abs/1409.1556",
+    year         = "2014"
+}
+
+@article{ginosar2015century,
+  title={A Century of Portraits: A Visual Historical Record of American High School Yearbooks},
+  author={Ginosar, Shiry and Rakelly, Kate and Sachs, Sarah and Yin, Brian and Efros, Alexei A},
+  journal={arXiv preprint arXiv:1511.02575},
+  year={2015}
+} 
