Sorted regression methodology back to proper file, added classification methodology.

--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -6,7 +6,7 @@
     \item Change detection across seasons, \cite{Neubert2013}, not based on deep nets
     \item the framework of cedric and shane for the lake dataset and image alignements : "Survey Registration For Long-Term Natural Environment Monitoring"
     \item Oxford article on regression, \cite{conf/accv/PfisterSCZ14}
-    \item How to choose parameters for a ConvNet, \cite{NIPS2012_4824}
+    \item AlexNet paper with great details on parameter choice, \cite{NIPS2012_4824}
     \item OxfordNet, \cite{Simonyan14c}
     \item Average faces over American Yearbooks, \cite{ginosar2015century}
 \end{itemize}
