--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@ This document demonstrates the format requirements for papers submitted
 to the British Machine Vision Conference.  The format is designed for
 easy on-screen reading, and to print well at one or two pages per sheet.
 Additional features include: pop-up annotations for
-citations~\cite{Authors06,Mermin89}; a margin ruler for reviewing; and a
+citations; a margin ruler for reviewing; and a
 greatly simplified way of entering multiple authors and institutions.
 
 {\bf All authors are encouraged to read this document}, even if you have
