--- a/egbib.bib
+++ b/egbib.bib
@@ -56,8 +56,7 @@
   author = {Pfister, Tomas and Simonyan, Karen and Charles, James and Zisserman, Andrew},
   biburl = {http://www.bibsonomy.org/bibtex/2594a6e5cccf97052343ebdb4793d9855/dblp},
   booktitle = {ACCV (1)},
-  crossref = {conf/accv/2014-1},
-  editor = {Cremers, Daniel and Reid, Ian D. and Saito, Hideo and Yang, Ming-Hsuan},
+  editor = {Cremers, Daniel and ReidZ, Ian D. and Saito, Hideo and Yang, Ming-Hsuan},
   ee = "http://dx.doi.org/10.1007/978-3-319-16865-4_35",
   interhash = {b5fefb6d612dd17851219fd8f6633d4a},
   intrahash = {594a6e5cccf97052343ebdb4793d9855},
