--- a/results-regression.tex
+++ b/results-regression.tex
@@ -1,1 +1,7 @@
 \subsection{Regression}
+
+- Gaussian initialization of weights had to be tuned so that the convolution layers pass information to the fully connected layers (variances and biases)
+- Learning rate adaptation depending of the nature of the layer (fc or conv).
+- Weight decay
+- Tests after loading the weights from the classification
+- Influence of the dropout layer
