adding some notes on results-regression for us to use the rights tests

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -5,3 +5,15 @@
 - Weight decay
 - Tests after loading the weights from the classification
 - Influence of the dropout layer
+
+Tests results to include :
+
+Learning from scratch with projection in labels :
+Machine 191: Tests 31, 34, 35, 36
+Machine 193: Tests 34, 35, 26(bad filters but good loss)
+
+Learning with pre-trained weights :
+Machine 191: Test 30
+
+Learning with angle label :
+Machine 193: Test 37
