Name of the lake_prediction image

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -70,7 +70,7 @@ The best results in term of generalization and precision of the prediction were 
 \begin{subfigure}{0.5\textwidth}
 \centering
 \label{map}
-\includegraphics[width=0.7\linewidth]{images/regression/map.png}
+\includegraphics[width=0.7\linewidth]{images/regression/lake_prediction.png}
 \caption{Map of predicted positions and original labels}
 \end{subfigure}%
 \begin{subfigure}{0.5\textwidth}
