Adding bullet points in the introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,11 @@
 \section{Introduction}
 \label{sec:intro}
 Check {\tt bmvc\_guidelines.pdf} for the original text.
+- Experimentation of deep learning technique for localization in a natural environment
+- Goal: obtaining a seasonal invariant and light invariant representation of natural environment images
+- Unique dataset 
+- Two different approaches: classification and regression
+- Starting point: testing a network (CaffeNet) which performs well on classification task for well known datasets such as ImageNet.
+
+- Classification: ...
+- Regression: we try to learn the model that match the image to the GPS coordinates which can allow to identify a place robustly.
