Solved the subfigure problem

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -10,73 +10,53 @@ Based on those general settings, we tested three different approaches. The first
 Loss = \frac{0.5}{scale^{2}}*\sum_{i=1,\ 4}(label_{i}-prediction_{i})^{2}
 \end{equation}
 
-The first approach allowed to achieve an average error of 19.3 meters per label as it is shown in the \ref{1apploss}. However after the training, the convolution layers filters did not exhibit any specific features (\ref{1appfilter}). Thus, it appears that the regression was only supported by the fully connected layers. In our case where the goal is to build a seasonal invariant representation of natural scenes this approach did not reach our expectations. 
+The first approach allowed to achieve an average error of 19.3 meters per label as it is shown in the \ref{1apploss}.a. However after the training, the convolution layers filters did not exhibit any specific features (fig.~\ref{1appfilter}.a). Thus, it appears that the regression was only supported by the fully connected layers. In our case where the goal is to build a seasonal invariant representation of natural scenes this approach did not reach our expectations. 
 
-The second approach led us to consider the difference of behavior of the fully-connected layers regarding the sensitivity to learning rate. By decreasing the learning rate of those layers, we forced the convolution layers to take part in the regression. This method resulted in being more successful than the previous one. The best average error we achieved was 18.3 meters (\ref{2apploss}). Some natural environment features can be retrieved in the convolution filters (\ref{2appfilter}).
+The second approach led us to consider the difference of behavior of the fully-connected layers regarding the sensitivity to learning rate. By decreasing the learning rate of those layers, we forced the convolution layers to take part in the regression. This method resulted in being more successful than the previous one. The best average error we achieved was 18.3 meters (fig.~\ref{2apploss}.b). Some natural environment features can be retrieved in the convolution filters (fig.~\ref{2appfilter}.b).
 
-The last approach was used on the first approach configuration. It was observed that the convolution weights decreased during the training and ended with a similar distribution than the previous approach. The best average error achieved was 20.9 (\ref{3apploss}). However the convolution filters retrieved exhibited different structures than the previous approach(\ref{3appfilter}). Based on this result it can be concluded that the convolution weights learned during the classification training could not be reused for the regression task. The weights needed for this task required a smaller variance and the final model presented the worst results among the three approaches. Consequently, learning from scratch seems to be more efficient in the case of a regression.
+The last approach was used on the first approach configuration. It was observed that the convolution weights decreased during the training and ended with a similar distribution than the previous approach. The best average error achieved was 20.9 (fig.~\ref{3apploss}.c). However the convolution filters retrieved exhibited different structures than the previous approach (fig~\ref{3appfilter}.c). Based on this result it can be concluded that the convolution weights learned during the classification training could not be reused for the regression task. The weights needed for this task required a smaller variance and the final model presented the worst results among the three approaches. Consequently, learning from scratch seems to be more efficient in the case of a regression.
 
 
-\begin{figure}[!h]
+
+\begin{figure}[htb]
 \centering
-\begin{subfigure}{0.33\textwidth}
-\label{1apploss}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/test_loss_26_135000.png}
-\caption{First approach}
-\end{subfigure}%
-\begin{subfigure}{0.33\textwidth}
-\label{2apploss}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/test_loss_37_135000.png}
-\caption{Second approach}
-\end{subfigure}%
-\begin{subfigure}{0.33\textwidth}
-\label{3apploss}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/test_loss_30_135000.png}
-\caption{Third approach}
-\end{subfigure}
+\begin{tabular}{ccc}
+    a) First approach & b) Second approach & c) Third approach \\
+    \includegraphics[width=0.33\textwidth]{images/regression/test_loss_26_135000}&
+    \includegraphics[width=0.33\textwidth]{images/regression/test_loss_37_135000}&
+    \includegraphics[width=0.33\textwidth]{images/regression/test_loss_30_135000}\\
+\end{tabular}
 \caption{Loss Function for 135 000 iterations}
+\label{1apploss}
+\label{2apploss}
+\label{3apploss}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[htb]
 \centering
-\begin{subfigure}{0.33\textwidth}
-\label{1appfilter}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/conv1_26_135000.png}
-\caption{First approach}
-\end{subfigure}%
-\begin{subfigure}{0.33\textwidth}
-\label{2appfilter}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/conv1_37_135000.png}
-\caption{Second approach}
-\end{subfigure}%
-\begin{subfigure}{0.33\textwidth}
-\label{3appfilter}
-\centering
-\includegraphics[width=0.9\linewidth]{images/regression/conv1_30_135000.png}
-\caption{Third approach}
-\end{subfigure}
+\begin{tabular}{ccc}
+    a) First approach & b) Second approach & c) Third approach \\
+    \includegraphics[width=0.33\linewidth]{images/regression/conv1_26_135000}&
+    \includegraphics[width=0.33\linewidth]{images/regression/conv1_37_135000}&
+    \includegraphics[width=0.33\linewidth]{images/regression/conv1_30_135000}\\
+\end{tabular}
 \caption{Conv1 filters after 135 000 iterations}
+\label{1appfilter}
+\label{2appfilter}
+\label{3appfilter}
 \end{figure}
 
-The best results in term of generalization and precision of the prediction were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for image from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (\ref{map}).
+The best results in term of generalization and precision of the prediction were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for image from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a).
 
-\begin{figure}[!h]
+\begin{figure}[htb]
 \centering
-\begin{subfigure}{0.5\textwidth}
-\centering
+\begin{tabular}{cc}
+    a) Map of predicted positions&
+    b) Map of original labels\\
+    \bmvaHangBox{\includegraphics[width=0.59\textwidth]{images/regression/lake_prediction}}&
+    \bmvaHangBox{\includegraphics[width=0.39\textwidth]{images/regression/lake}}\\
+\end{tabular}
+\caption{Map of predicted positions and original labels}
 \label{map}
-\includegraphics[width=0.7\linewidth]{images/regression/lake_prediction.png}
-\caption{Map of predicted positions and original labels}
-\end{subfigure}%
-\begin{subfigure}{0.5\textwidth}
-\centering
 \label{lake}
-\includegraphics[width=0.7\linewidth]{images/regression/lake.png}
-\caption{Map of predicted positions and original labels}
-\end{subfigure}
 \end{figure}
