Draft of abstract and intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,15 +1,18 @@
 
 \begin{abstract}
-This document demonstrates the format requirements for papers submitted
-to the British Machine Vision Conference.  The format is designed for
-easy on-screen reading, and to print well at one or two pages per sheet.
-Additional features include: pop-up annotations for
-citations; a margin ruler for reviewing; and a
-greatly simplified way of entering multiple authors and institutions.
+    This paper focuses on the evaluation of deep convolutional neural networks
+    for the analysis of images of natural scenes subjected to large
+    seasonal variation as well as significant changes of lighting conditions.
+    The context is the development of tools for long-term natural environment
+    monitoring with an autonomous mobile robot. 
 
-{\bf All authors are encouraged to read this document}, even if you have
-written many papers before.  As well as a description of the format, the
-document contains many instructions relating to formatting problems and
-errors that are common even in the work of authors who {\em have}
-written many papers before.
+    We report various experiments conducted on a large dataset consisting of a
+    weekly survey of the shore of a small lake over two years using an
+    autonomous surface vessel. This dataset is used first in a place
+    recognition task framed as a classification problem, then in a pose
+    regression task and finally the internal features learnt by the
+    network are evaluated for their representation power. 
+
+    All our results are based on the Caffe library and default network
+    structures where possible.
 \end{abstract}
