--- a/egbib.bib
+++ b/egbib.bib
@@ -96,3 +96,10 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   journal={arXiv preprint arXiv:1511.02575},
   year={2015}
 } 
+
+@article{jia2014caffe,
+  Author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+  Journal = {arXiv preprint arXiv:1408.5093},
+  Title = {Caffe: Convolutional Architecture for Fast Feature Embedding},
+  Year = {2014}
+}t
